Set up subclasses of Spell rather than SpellVariety

--- a/test/fixtures/spell_varieties.yml
+++ b/test/fixtures/spell_varieties.yml
@@ -2,14 +2,14 @@
 
 one:
   name: MyString
-  type: MyString
+  spell_type: MyString
   is_persistent: false
   is_in_rotation: false
   image: MyString
 
 two:
   name: MyString
-  type: MyString
+  spell_type: MyString
   is_persistent: false
   is_in_rotation: false
   image: MyString
